--- a/docs/drafts/fragments/results.html
+++ b/docs/drafts/fragments/results.html
@@ -5,16 +5,21 @@
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
+        <col class="col_req"/>
       </colgroup>
       <tr>
         <th>Id</th>
+        <th>Req?</th>
         <th>ACME Books</th>
         <th>Example Books <br>(consolidated)</th>
+        <th>T</th>
       </tr>
       <tr>
         <td id="cmt-mp3-results">
           <a href="index.html#cmt-mp3">cmt-mp3</a>
         </td>
+        <td>true</td>
+        <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
       </tr>
@@ -25,16 +30,48 @@
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
+        <col class="col_req"/>
       </colgroup>
       <tr>
         <th>Id</th>
+        <th>Req?</th>
         <th>ACME Books</th>
         <th>Example Books <br>(consolidated)</th>
+        <th>T</th>
+      </tr>
+      <tr>
+        <td id="pkg-a-title-order-results">
+          <a href="index.html#pkg-a-title-order">pkg-a-title-order</a>
+        </td>
+        <td>true</td>
+        <td>n/a</td>
+        <td>n/a</td>
+        <td>n/a</td>
+      </tr>
+      <tr>
+        <td id="pkg-unique-id-results">
+          <a href="index.html#pkg-unique-id">pkg-unique-id</a>
+        </td>
+        <td>true</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+      </tr>
+      <tr>
+        <td id="pkg-unique-id-results">
+          <a href="index.html#pkg-unique-id">pkg-unique-id</a>
+        </td>
+        <td>true</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
       </tr>
       <tr>
         <td id="pkg-flow-paginated-results">
           <a href="index.html#pkg-flow-paginated">pkg-flow-paginated</a>
         </td>
+        <td>false</td>
+        <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
       </tr>
@@ -42,13 +79,17 @@
         <td id="pkg-flow-scrolled-continuous-results">
           <a href="index.html#pkg-flow-scrolled-continuous">pkg-flow-scrolled-continuous</a>
         </td>
+        <td>false</td>
+        <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
       </tr>
       <tr>
-        <td id="pkg-flow-scrolled-doc-results">
-          <a href="index.html#pkg-flow-scrolled-doc">pkg-flow-scrolled-doc</a>
+        <td id="pkg-z-flow-scrolled-doc-results">
+          <a href="index.html#pkg-z-flow-scrolled-doc">pkg-z-flow-scrolled-doc</a>
         </td>
+        <td>false</td>
+        <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
       </tr>
@@ -59,17 +100,40 @@
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
+        <col class="col_req"/>
       </colgroup>
       <tr>
         <th>Id</th>
+        <th>Req?</th>
         <th>ACME Books</th>
         <th>Example Books <br>(consolidated)</th>
+        <th>T</th>
       </tr>
       <tr>
         <td id="confreq-rs-pkg-dir_creator-rtl-results">
           <a href="index.html#confreq-rs-pkg-dir_creator-rtl">confreq-rs-pkg-dir_creator-rtl</a>
         </td>
+        <td>true</td>
         <td>n/a</td>
+        <td>n/a</td>
+        <td>n/a</td>
+      </tr>
+      <tr>
+        <td id="pkg-dir_creator-rtl-results">
+          <a href="index.html#pkg-dir_creator-rtl">pkg-dir_creator-rtl</a>
+        </td>
+        <td>true</td>
+        <td class="pass">pass</td>
+        <td class="pass">pass</td>
+        <td>n/a</td>
+      </tr>
+      <tr>
+        <td id="pkg-dir_unset-root-rtl-results">
+          <a href="index.html#pkg-dir_unset-root-rtl">pkg-dir_unset-root-rtl</a>
+        </td>
+        <td>true</td>
+        <td class="fail">fail</td>
+        <td class="pass">pass</td>
         <td>n/a</td>
       </tr>
     </table>
@@ -79,16 +143,21 @@
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
+        <col class="col_req"/>
       </colgroup>
       <tr>
         <th>Id</th>
+        <th>Req?</th>
         <th>ACME Books</th>
         <th>Example Books <br>(consolidated)</th>
+        <th>T</th>
       </tr>
       <tr>
         <td id="confreq-mathml-rs-behavior-results">
           <a href="index.html#confreq-mathml-rs-behavior">confreq-mathml-rs-behavior</a>
         </td>
+        <td>true</td>
+        <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
       </tr>
@@ -102,18 +171,23 @@
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
+        <col class="col_req"/>
       </colgroup>
       <tr>
         <th>Id</th>
+        <th>Req?</th>
         <th>ACME Books</th>
         <th>Example Books <br>(Android)</th>
         <th>Example Books <br>(iOS)</th>
         <th>Example Books <br>(Web)</th>
+        <th>T</th>
       </tr>
       <tr>
         <td id="cmt-mp3-results-detailed">
           <a href="index.html#cmt-mp3">cmt-mp3</a>
         </td>
+        <td>true</td>
+        <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
@@ -126,18 +200,56 @@
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
+        <col class="col_req"/>
       </colgroup>
       <tr>
         <th>Id</th>
+        <th>Req?</th>
         <th>ACME Books</th>
         <th>Example Books <br>(Android)</th>
         <th>Example Books <br>(iOS)</th>
         <th>Example Books <br>(Web)</th>
+        <th>T</th>
+      </tr>
+      <tr>
+        <td id="pkg-a-title-order-results-detailed">
+          <a href="index.html#pkg-a-title-order">pkg-a-title-order</a>
+        </td>
+        <td>true</td>
+        <td>n/a</td>
+        <td>n/a</td>
+        <td>n/a</td>
+        <td>n/a</td>
+        <td>n/a</td>
+      </tr>
+      <tr>
+        <td id="pkg-unique-id-results-detailed">
+          <a href="index.html#pkg-unique-id">pkg-unique-id</a>
+        </td>
+        <td>true</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+      </tr>
+      <tr>
+        <td id="pkg-unique-id-results-detailed">
+          <a href="index.html#pkg-unique-id">pkg-unique-id</a>
+        </td>
+        <td>true</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
       </tr>
       <tr>
         <td id="pkg-flow-paginated-results-detailed">
           <a href="index.html#pkg-flow-paginated">pkg-flow-paginated</a>
         </td>
+        <td>false</td>
+        <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
@@ -147,15 +259,19 @@
         <td id="pkg-flow-scrolled-continuous-results-detailed">
           <a href="index.html#pkg-flow-scrolled-continuous">pkg-flow-scrolled-continuous</a>
         </td>
+        <td>false</td>
+        <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
       </tr>
       <tr>
-        <td id="pkg-flow-scrolled-doc-results-detailed">
-          <a href="index.html#pkg-flow-scrolled-doc">pkg-flow-scrolled-doc</a>
+        <td id="pkg-z-flow-scrolled-doc-results-detailed">
+          <a href="index.html#pkg-z-flow-scrolled-doc">pkg-z-flow-scrolled-doc</a>
         </td>
+        <td>false</td>
+        <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
@@ -168,21 +284,48 @@
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
+        <col class="col_req"/>
       </colgroup>
       <tr>
         <th>Id</th>
+        <th>Req?</th>
         <th>ACME Books</th>
         <th>Example Books <br>(Android)</th>
         <th>Example Books <br>(iOS)</th>
         <th>Example Books <br>(Web)</th>
+        <th>T</th>
       </tr>
       <tr>
         <td id="confreq-rs-pkg-dir_creator-rtl-results-detailed">
           <a href="index.html#confreq-rs-pkg-dir_creator-rtl">confreq-rs-pkg-dir_creator-rtl</a>
         </td>
+        <td>true</td>
         <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
+        <td>n/a</td>
+        <td>n/a</td>
+      </tr>
+      <tr>
+        <td id="pkg-dir_creator-rtl-results-detailed">
+          <a href="index.html#pkg-dir_creator-rtl">pkg-dir_creator-rtl</a>
+        </td>
+        <td>true</td>
+        <td class="pass">pass</td>
+        <td class="fail">fail</td>
+        <td class="pass">pass</td>
+        <td class="fail">fail</td>
+        <td>n/a</td>
+      </tr>
+      <tr>
+        <td id="pkg-dir_unset-root-rtl-results-detailed">
+          <a href="index.html#pkg-dir_unset-root-rtl">pkg-dir_unset-root-rtl</a>
+        </td>
+        <td>true</td>
+        <td class="fail">fail</td>
+        <td class="fail">fail</td>
+        <td class="pass">pass</td>
+        <td class="fail">fail</td>
         <td>n/a</td>
       </tr>
     </table>
@@ -192,18 +335,23 @@
     <table class="zebra">
       <colgroup>
         <col class="col_id"/>
+        <col class="col_req"/>
       </colgroup>
       <tr>
         <th>Id</th>
+        <th>Req?</th>
         <th>ACME Books</th>
         <th>Example Books <br>(Android)</th>
         <th>Example Books <br>(iOS)</th>
         <th>Example Books <br>(Web)</th>
+        <th>T</th>
       </tr>
       <tr>
         <td id="confreq-mathml-rs-behavior-results-detailed">
           <a href="index.html#confreq-mathml-rs-behavior">confreq-mathml-rs-behavior</a>
         </td>
+        <td>true</td>
+        <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
         <td>n/a</td>
