Added a proper access to the OPF file

--- a/docs/drafts/fragments/results.html
+++ b/docs/drafts/fragments/results.html
@@ -281,6 +281,15 @@
         <td class="pass">pass</td>
       </tr>
       <tr>
+        <td id="pkg-relative-url-results">
+          <a href="index.html#pkg-relative-url">pkg-relative-url</a>
+        </td>
+        <td class="must">true</td>
+        <td>n/a</td>
+        <td>n/a</td>
+        <td>n/a</td>
+      </tr>
+      <tr>
         <td id="pkg-spine-duplicate-item-hyperlink-results">
           <a href="index.html#pkg-spine-duplicate-item-hyperlink">pkg-spine-duplicate-item-hyperlink</a>
         </td>
@@ -1098,6 +1107,17 @@
         <td class="fail">fail</td>
         <td class="fail">fail</td>
         <td class="pass">pass</td>
+      </tr>
+      <tr>
+        <td id="pkg-relative-url-results-detailed">
+          <a href="index.html#pkg-relative-url">pkg-relative-url</a>
+        </td>
+        <td class="must">true</td>
+        <td>n/a</td>
+        <td>n/a</td>
+        <td>n/a</td>
+        <td>n/a</td>
+        <td>n/a</td>
       </tr>
       <tr>
         <td id="pkg-spine-duplicate-item-hyperlink-results-detailed">
