--- a/docs/drafts/fragments/tests.html
+++ b/docs/drafts/fragments/tests.html
@@ -436,6 +436,21 @@
         </td>
       </tr>
       <tr>
+        <td id="pkg-relative-url">
+          <a href="https://github.com/w3c/epub-tests/tree/main/tests/pkg-relative-url">pkg-relative-url</a>
+        </td>
+        <td class="must">true</td>
+        <td>Content in relative subdirectory</td>
+        <td>The manifest refers to an XHTML file in an arbitrary subfolder that is relative to the package's own arbitrary folder. The reading system must be able to find the content.</td>
+        <td>
+          <a href="https://w3c.github.io/epub-specs/epub33/core/#confreq-root-url">(1) </a>
+          <a href="https://w3c.github.io/epub-specs/epub33/rs/#confreq-rs-pkg-manifest-url">(2) </a>
+        </td>
+        <td>
+          <a href="results.html#pkg-relative-url-results">❐</a>
+        </td>
+      </tr>
+      <tr>
         <td id="pkg-spine-duplicate-item-hyperlink">
           <a href="https://github.com/w3c/epub-tests/tree/main/tests/pkg-spine-duplicate-item-hyperlink">pkg-spine-duplicate-item-hyperlink</a>
         </td>
