thrown xml2js out from html.ts

--- a/docs/drafts/fragments/creators.html
+++ b/docs/drafts/fragments/creators.html
@@ -1,8 +1,1 @@
-<ul class="creator_list">
-  <li>Dan Lazin</li>
-  <li>Dave Cramer</li>
-  <li>Ivan Herman</li>
-  <li>Matt Garrish</li>
-  <li>Matthew Chan</li>
-  <li>Wendy Reid</li>
-</ul>
+<ul><li>Dan Lazin</li><li>Dave Cramer</li><li>Ivan Herman</li><li>Matt Garrish</li><li>Matthew Chan</li><li>Wendy Reid</li></ul>
