--- a/docs/drafts/fragments/implementations.html
+++ b/docs/drafts/fragments/implementations.html
@@ -1,17 +1,1 @@
-<section>
-  <h2 id="sec-implementer-list">List of Implementations</h2>
-  <ol>
-    <li>
-      <a href="https://wysebee.com/">Wysebee (Android (PWA))</a>
-    </li>
-    <li>
-      <a href="https://wysebee.com/">Wysebee (iOS (PWA))</a>
-    </li>
-    <li>
-      <a href="https://wysebee.com/">Wysebee (Web (Chrome))</a>
-    </li>
-    <li>
-      <a href="https://wysebee.com/">Wysebee (Web (Safari))</a>
-    </li>
-  </ol>
-</section>
+<section id="sec-implementer-list"><h2>List of Implementations</h2><ol><li><a href="https://wysebee.com/">Wysebee</a>, Android (PWA)</li><li><a href="https://wysebee.com/">Wysebee</a>, iOS (PWA)</li><li><a href="https://wysebee.com/">Wysebee</a>, Web (Chrome)</li><li><a href="https://wysebee.com/">Wysebee</a>, Web (Safari)</li></ol></section>
