--- a/docs/drafts/fragments/tests.html
+++ b/docs/drafts/fragments/tests.html
@@ -1,4 +1,4 @@
-<section id="sec-test-tables"><h2>Description of the Tests</h2><section><h3 id="sec-publication-resources-data">Publication Resources</h3><table class="zebra"><colgroup>
+<section id="sec-test-tables"><h2>Description of the Tests</h2><div id="button_container"><button id="should_may_visibility" type="button">Switch visibility</button></div><section><h3 id="sec-publication-resources-data">Publication Resources</h3><table class="zebra"><colgroup>
             <col class="col_id">
             <col class="col_req">
             <col class="col_title">
