--- a/tests/mol-rendering-audio/EPUB/css/base.css
+++ b/tests/mol-rendering-audio/EPUB/css/base.css
@@ -1,12 +1,11 @@
-@charset "utf-8";
-
-/*for the active text element*/
-.-epub-media-overlay-active {
-    background-color: pink !important;
-    color: black !important;
+/* for the active text element */
+.my-active-item {
+  background-color: pink !important;
+  color: black !important;
 }
-/*for the currently-playing document*/
-.-epub-media-overlay-playback-active .mo-playing {
-    background-color: green !important;
-    color: white !important;
+
+/* for the currently-playing document */
+.my-document-playing {
+  background-color: green !important;
+  color: white !important;
 }
