OPDS generation is now complete; give it a rest before PR

--- a/docs/drafts/fragments/creators.html
+++ b/docs/drafts/fragments/creators.html
@@ -1,1 +1,1 @@
-<ul><li>Dan Lazin</li><li>Dave Cramer</li><li>Ivan Herman</li><li>Marisa DeMeglio</li><li>Wendy Reid</li></ul>
+<ul><li>Dan Lazin</li><li>Dave Cramer</li><li>Ivan Herman</li><li>Marisa DeMeglio</li><li>Matt Garrish</li><li>Matthew Chan</li><li>Wendy Reid</li><li>Zheng Xu</li></ul>
