--- a/generate/fragments/creators.html
+++ b/generate/fragments/creators.html
@@ -6,6 +6,7 @@
     <li>Marisa DeMeglio</li>
     <li>Matt Garrish</li>
     <li>Matthew Chan</li>
+    <li>Susan Neuhaus</li>
     <li>Wendy Reid</li>
     <li>Zheng Xu</li>
 </ul>
